# forge-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  forge.bootstrap.toml
.beads/: README.md  config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml
devhub/: README.md
docs/: README.md  architecture.md  development.md  documentation.md  references.md  rust.md  security.md  testing.md
docs/designs/: 0000-template.md  0001-config-format-and-secret-handling.md  README.md
docs/notes/: README.md
docs/process/: README.md  bootstrap.md  code-review.md  committing.md  implementation.md  issue-tracking.md  operability.md  planning.md  stewardship.md
docs/spec/: 0000-template.md  01-introduction.md  02-forge-doctor.md  03-product-direction.md  README.md  _index.md  guide.md
src/: checks.rs  cli.rs  config.rs  environment.rs  lib.rs  main.rs  report.rs
workflows/: README.md  bootstrap.md  ci.md  jj-bd.md
