[package]
name = "forge-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
